--- a/jpaTestProject02/.classpath
+++ b/jpaTestProject02/.classpath
@@ -9,5 +9,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="mysql-connector-java-8.0.23.jar"/>
 	<classpathentry kind="lib" path="/Solution/src/main/java/employee_crud/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
